subprojects {
    apply plugin: 'java'

    java {
        sourceCompatibility = '25'
        targetCompatibility = '25'
    }

    repositories {
        mavenCentral()
    }

    dependencies {
        compileOnly 'org.projectlombok:lombok:1.18.38'
        annotationProcessor 'org.projectlombok:lombok:1.18.38'
        testCompileOnly 'org.projectlombok:lombok:1.18.38'
        testAnnotationProcessor 'org.projectlombok:lombok:1.18.38'

        implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
        implementation 'org.slf4j:slf4j-api:2.0.16'
        runtimeOnly 'ch.qos.logback:logback-classic:1.5.8'

        testImplementation 'org.junit.jupiter:junit-jupiter:5.11.0'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

        testImplementation 'org.mockito:mockito-core:5.+'
        testImplementation 'org.mockito:mockito-junit-jupiter:5.+'

    }
        test {
        useJUnitPlatform()
    }

    tasks.withType(JavaCompile).configureEach {
        options.compilerArgs.add('--enable-preview')
    }

    tasks.withType(Test).tap {
        configureEach {
            jvmArgs.add('--enable-preview')
        }
    }

}
